<resources>
    <string name="app_name">MyShop</string>
    <string name="title_stock">Stock</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_sale">Sale</string>
    <string name="product_code_hint">code du produit</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_settings">Settings</string>
    <string name="preference_file_key">setting_keys</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_current_quantity_hint">Current Quantity</string>
    <string name="product_add_quantity_hint" translatable="false">Quantity to Add</string>
    <string name="product_new_quantity_hint">New Quantity</string>
    <string name="product_current_amount_hint">Current Amount</string>
    <string name="product_new_amount_hint">New Amount</string>
    <string name="product_name_hint">Name</string>
    <string name="add_product">Add Product</string>
    <string name="database_name">smalldb</string>
    <string name="scanner_prompt">Scanning</string>
    <string name="operation_success">Operation Done with success</string>
    <string name="operation_failed">Operation With error</string>
    <string name="total_amount">Total</string>
    <string name="save">Save</string>
    <string name="not_number">Please enter number</string>
    <string name="not_empty">Empty value not authorised</string>
    <string name="not_stock">Empty stock</string>
    <string name="less_stock">Insufficient quantity</string>
    <string name="customer_customer_hint">Costumer Number</string>
    <string name="red_threshold_hint">Red Threshold</string>
    <string name="yellow_threshold_hint">Yellow Threshold</string>
    <string name="threshold_legend">Critical Stock</string>
    <string name="day_account_hint">Day</string>
    <string name="week_account_hint">Week</string>
    <string name="month_account_hint">Month</string>
    <string name="activation_code_hint" translatable="false">Activation Code</string>

</resources>
